After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708156 - Location bug fixes from geoclue
Location bug fixes from geoclue
Status: RESOLVED FIXED
Product: geocode-glib
Classification: Other
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: geocode-glib maintainer(s)
geocode-glib maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-09-16 13:27 UTC by Bastien Nocera
Modified: 2013-09-16 17:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
P (1.86 KB, patch)
2013-09-16 13:28 UTC, Bastien Nocera
accepted-commit_now Details | Review
P (964 bytes, patch)
2013-09-16 13:28 UTC, Bastien Nocera
accepted-commit_now Details | Review

Description Bastien Nocera 2013-09-16 13:27:29 UTC
.
Comment 1 Bastien Nocera 2013-09-16 13:28:04 UTC
Created attachment 255023 [details] [review]
P
Comment 2 Bastien Nocera 2013-09-16 13:28:31 UTC
Created attachment 255024 [details] [review]
P
Comment 3 Zeeshan Ali 2013-09-16 13:39:23 UTC
Review of attachment 255023 [details] [review]:

ACK
Comment 4 Zeeshan Ali 2013-09-16 13:39:39 UTC
Review of attachment 255024 [details] [review]:

ACK