location: Allow setting properties after construct time

See also: https://bugs.freedesktop.org/show_bug.cgi?id=69105

https://bugzilla.gnome.org/show_bug.cgi?id=708156